--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -16,8 +16,8 @@ jobs:
 
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-2016]
         node-version: [10.x, 12.x]
-
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
